# devo-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  ONEDIR_DISTRIBUTION.md  QUICKSTART.md  README.md  README_NUITKA.md  benchmark.py  devo-sidecar.spec  devo.spec  docker-compose.test.yml  index.html  install.ps1  install.sh  mkdocs.yml  nuitka-build.py  pyproject.toml  release.sh  requirements.txt  setup-dev.sh  setup.py  sitemap.xml  skills-lock.json  sonar-project.properties  test-install.ps1  test_compatibility.py  wrangler.toml  zensical.yml
.agents/plans/: desktop-roadmap.md
.github/workflows/: desktop.yml  docs.yml  lint-reusable.yml  release.yml  sonar.yml  test-reusable.yml  test.yml
.kiro/steering/: architecture.md  assistant-rules.md  code-organization.md  git-workflow.md  language.md  product.md  structure.md  tech.md
BINARY_FORMATS/: index.html
DOCUMENTATION_STRUCTURE/: index.html
cicd/github-actions/: index.html
cicd/overview/: index.html
cicd/semantic-release/: index.html
cli_tool/: __init__.py  cli.py  config.py
cli_tool/agents/: base_agent.py
cli_tool/autocomplete/: __init__.py
cli_tool/aws_login/: README.md  __init__.py  command.py  config.py  credentials.py  list.py  login.py  refresh.py  set_default.py  setup.py  status.py
cli_tool/code_reviewer/: README.md  analyzer.py  git_utils.py
cli_tool/codeartifact/: __init__.py
cli_tool/commands/: aws_login.py  code_reviewer.py  codeartifact_login.py  commit_prompt.py  completion.py  config.py  dynamodb.py  eventbridge.py  generate.py  ssm.py  upgrade.py
cli_tool/commit/: __init__.py
cli_tool/config_cmd/: __init__.py
cli_tool/dynamodb/: README.md  __init__.py
cli_tool/eventbridge/: __init__.py
cli_tool/sidecar/: __init__.py  __main__.py  app.py  bootstrap.py  deps.py  events.py  rate_limit.py  state.py
cli_tool/ssm/: __init__.py  config.py  hosts_manager.py  port_forwarder.py  session.py
cli_tool/templates/: alter_table.txt.j2  create_index.txt.j2  ejemplo_template.txt.j2
cli_tool/ui/: __init__.py  console_ui.py
cli_tool/upgrade/: __init__.py  command.py
cli_tool/utils/: aws.py  aws_profile.py  config_manager.py  git_utils.py  templates.py  version_check.py
commands/: index.html
commands/aws-login/: index.html
commands/code-reviewer/: index.html
commands/codeartifact/: index.html
commands/commit/: index.html
commands/completion/: index.html
commands/config/: index.html
commands/dynamodb/: index.html
commands/eventbridge/: index.html
commands/ssm/: index.html
commands/upgrade/: index.html
desktop/: .gitignore  .prettierignore  .prettierrc  SIGNING.md  convert.ps1  eslint.config.js  index.html  kill-zombies.ps1  kill-zombies.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/scripts/: kill-zombies.mjs
desktop/src/: App.svelte  main.ts  test-setup.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/helper/: Cargo.toml  build.rs  helper.rc
desktop/src-tauri/helper/src/: main.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: elevated.rs  lib.rs  main.rs  sidecar.rs  tray.rs  updater.rs
development/building/: index.html
development/contributing/: index.html
development/setup/: index.html
docs/: BINARY_FORMATS.md  DOCUMENTATION_STRUCTURE.md  README.md  binary-distribution.md  ci-cd-workflows.md  cicd.md  configuration.md  contributing.md  development.md  eventbridge-command.md  github-actions.md  index.md  semantic-release.md  versioning.md  windows-installation.md
docs/assets/: custom.css
docs/cicd/: github-actions.md  overview.md  semantic-release.md
docs/commands/: aws-login.md  code-reviewer.md  codeartifact.md  commit.md  completion.md  config.md  dynamodb.md  eventbridge.md  index.md  ssm.md  upgrade.md
docs/development/: building.md  contributing.md  setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: aws-login-workflow.md  aws-setup.md  code-review-workflow.md  codeartifact-login.md  commit-workflow.md  desktop-auto-update.md  desktop-installation.md  desktop-security.md  dynamodb-export.md  index.md  shell-completion.md  ssm-port-forwarding.md
docs/reference/: configuration.md  environment.md  troubleshooting.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/aws-login-workflow/: index.html
guides/aws-setup/: index.html
guides/code-review-workflow/: index.html
guides/commit-workflow/: index.html
guides/dynamodb-export/: index.html
guides/shell-completion/: index.html
guides/ssm-port-forwarding/: index.html
hooks/: rth_charset_normalizer.py
overrides/: home.html
reference/configuration/: index.html
reference/environment/: index.html
reference/troubleshooting/: index.html
scripts/: README.md  build-windows.bat  build.sh  build_sidecar_placeholder.sh  install-binary.sh  package-windows.ps1
search/: search_index.json
tests/: README.md  conftest.py  test_bugfixes.py  test_cli.py  test_cli_tool_init.py  test_commit_prompt.py
tests/test_error_handling/: test_cli_errors.py  test_network_errors.py
tests/test_integration/: test_aws_login_to_commit.py  test_error_recovery.py  test_preflight.py  test_refresh_all.py  test_ssm_tunnel_workflow.py
tests/test_performance/: __init__.py  test_cli_startup.py  test_dynamodb_performance.py  test_regression.py
tests/test_platform/: test_cross_platform.py  test_linux.py  test_macos.py  test_windows.py
tests/test_regression/: GUIDELINES.md  QUICK_START.md  README.md  TEMPLATE.py  __init__.py  test_issue_123.py
tests/test_security/: test_credential_handling.py
tests/test_serialization/: test_config_roundtrip.py  test_dynamodb_roundtrip.py  test_pydantic_models.py
tests/test_sidecar/: test_app.py  test_bootstrap.py  test_deps.py  test_full_flow.py  test_openapi_contract.py  test_rate_limit.py  (+19 more)
(+377 files in other folders)
