[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "devo-cli"
dynamic = ["version"]
description = "A CLI tool for streamlining daily development workflows and AWS management."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Eduardo De la Cruz", email = "edudelacruzrojas@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.0,<9.0.0",
    "requests>=2.32.0,<3.0.0",
    "charset-normalizer>=3.3.2,<4.0.0",
    "rich>=13.0.0,<15.0.0",
    "tzdata>=2025.2",
    "strands-agents>=1.7.0,<2.0.0",
    "gitpython>=3.1.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "boto3>=1.35.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=78.0.0",
    "setuptools-scm>=8.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "moto[dynamodb,iam,events,ssm]>=5.0.0",
    "build>=1.0.0",
    "flake8>=6.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "zensical==0.0.24",
]

[project.scripts]
devo = "cli_tool.cli:main"

[project.urls]
Homepage = "https://github.com/edu526/devo-cli"
Repository = "https://github.com/edu526/devo-cli"

[tool.setuptools]
packages = ["cli_tool"]
include-package-data = true

[tool.setuptools.package-data]
cli_tool = ["templates/*.j2", "commands/*.py", "utils/*.py", "config.py"]

[tool.setuptools_scm]
write_to = "cli_tool/_version.py"

[tool.semantic_release]
major_on_zero = true
tag_format = "v{version}"
version_variables = []
build_command = ""
upload_to_vcs_release = true
upload_to_pypi = false
upload_to_repository = false
commit_parser = "conventional"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.isort]
profile = "black"
line_length = 150
extend_skip = ["_version.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers registration (prevents PytestUnknownMarkWarning)
markers = [
  "unit: Unit tests for core business logic",
  "integration: Integration tests for CLI commands",
  "platform: Platform-specific tests",
  "slow: Slow tests (skipped by default)",
]

# Coverage and execution configuration
addopts = [
  "--cov=cli_tool",
  "--cov-report=html",
  "--cov-report=term-missing",
  "-m not slow",  # Skip slow tests by default
  # "-n=auto",  # Parallel execution with pytest-xdist (commented out for now)
]

# Note: Coverage threshold is enforced in CI
# Current baseline: ~43% (as of 2025)
# Target progression:
# - Phase 1: 40% (current baseline, allows CI to pass)
# - Phase 2: 50% (add tests for uncovered commands)
# - Phase 3: 60% (improve core module coverage)
# - Phase 4: 70% (comprehensive coverage)
#
# Priority areas for improvement:
# - cli_tool/core/ modules (business logic)
# - cli_tool/commands/ modules (command handlers)
#
# Excluded from coverage:
# - __init__.py files (usually empty or just imports)
# - cli.py (entry point, tested via integration)
# - _version.py (auto-generated)
# - Platform-specific code (if sys.platform checks)

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/_version.py",
  "*/setup.py",
  "*/__init__.py",
  "*/cli_tool/cli.py",  # Entry point, tested via integration tests
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if sys.platform",
  "@abstractmethod",
]

[tool.black]
line-length = 150
target-version = ['py312']
