[package]
name = "devo"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Devo Desktop"
authors = ["HeyEdu.dev"]

# ponytail: the UAC helper (`helper/`) is a separate crate so its manifest
# (requireAdministrator) is only embedded in the helper binary, not in
# the main devo.exe. Sharing the workspace means both land in the same
# target/ dir and `cargo build` builds them together.
[workspace]
members = [".", "helper"]

[lib]
name = "devo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Threading", "Win32_System_Registry"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
